--- a/style.css
+++ b/style.css
@@ -61,3 +61,32 @@ body {
 .calculator-field {
     margin: 20px 0 10px 0;
 }
+
+.btn-calculate {
+    background-color: #238fcc;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-family: 'Roboto Condensed', sans-serif;
+    font-size: 20px;
+    color: #3e4452;
+    text-transform: uppercase;
+    border: 1px solid #238fcc;
+    margin: 0 auto;
+}
+
+.btn-calculate:hover {
+    background-color: #3e4452;
+    color: #238fcc;
+    border: 1px solid #238fcc;
+    cursor: pointer;
+}
+
+.button-field {
+    margin: 20px 0 10px 0;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
