Added media querie for mobile responsiveness

--- a/style.css
+++ b/style.css
@@ -102,3 +102,28 @@ body {
     justify-content: center;
     align-items: center;
 }
+
+@media only screen and (max-width: 450px) {
+    .calculator-block {
+        display: inline-block;
+        background-color: var(--secondary-color);
+        color: #fff;
+        width: 70vw;
+        margin: 0 auto;
+        padding: 20px;
+    }
+
+    .calculator-block h4 {
+        margin: 50px auto 20px auto;
+        text-align: center;
+        font-family: 'Roboto Condensed', sans-serif;
+    }
+    
+    .calculator-block span {
+        display: block;
+        margin: 0;
+        font-family: 'Roboto Condensed', sans-serif;
+        font-size: 30px;
+        text-align: center;
+    }
+}
